Add websocket to route

--- a/src/default.conf
+++ b/src/default.conf
@@ -12,6 +12,14 @@ server {
     proxy_busy_buffers_size   64k;
     
     server_tokens off;
+    
+    location /ws/ps2/ {
+        proxy_pass http://voidwelldaybreakgames:5000/ws/ps2/;
+        
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
         
     location /api/ {
         proxy_pass http://voidwellapi:5000/;
