--- a/src/default.conf
+++ b/src/default.conf
@@ -13,8 +13,8 @@ server {
     
     server_tokens off;
     
-    location /ws/ps2/ {
-        proxy_pass http://voidwelldaybreakgames:5000/ws/ps2/;
+    location /ws/ {
+        proxy_pass http://voidwellmessagewell:5000/;
         
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
