--- a/src/default.conf
+++ b/src/default.conf
@@ -13,7 +13,7 @@ server {
     
     server_tokens off;
     
-    location /ws/ {
+    location /stream/ {
         proxy_pass http://voidwellmessagewell:5000/;
         
         proxy_http_version 1.1;
