--- a/src/default.conf
+++ b/src/default.conf
@@ -3,6 +3,25 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
+gzip            on;
+gzip_min_length 1100;
+gzip_buffers    16 8k;
+gzip_proxied    any;
+gzip_comp_level 6;
+gzip_types
+    text/plain
+    text/css
+    text/js
+    text/xml
+    text/javascript
+    application/javascript
+    application/json
+    application/xml
+    application/rss+xml
+    font/truetype
+    font/opentype
+    image/svg+xml;
+
 server {
     listen 5000;
     server_name localdev.com;
@@ -13,8 +32,8 @@ server {
     
     server_tokens off;
     
-    location /ws/ps2/ {
-        proxy_pass http://voidwelldaybreakgames:5000/ws/ps2/;
+    location /stream/ {
+        proxy_pass http://voidwellmessagewell:5000/;
         
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
